--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 "Город Н-ск. 2000"
 </title>
 </head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <header> Газета "Город Н-ск. 2000" - Новокуйбышевск
 <nav>
