--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </aside>
 </article>
 </section>
-<footer>Выпуск #46 (946) Пятница, 23 ноября 2018 г.</footer>
-<footer>http://gorod.n-sk.info/</footer>
+<footer><p>Выпуск #46 (946) Пятница, 23 ноября 2018 г.</p>
+<a href='#'>http://gorod.n-sk.info/</a></footer>
 </body>
 </html>
