--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 </header>
 <section>
 <p><STRONG>
-Поддержка. "Нове" пообещали 35 миллионов</STRONG>
-</p>
+Поддержка. "Нове" пообещали 35 миллионов</STRONG></p>
 </section>
 <section>
 <p><I>Капитан Владимир Съемщиков ждет, что финансирование команды войдет в нормальное русло.</I>
 </p>
 </section>
 <section>
-<article>
-<p>
+<article><p>
   2 ноября на страницах газеты была опубликована корреспонденция «Рушится морально». 
   В ней мы рассказали о непростой финансовой ситуации в волейбольном клубе «Нова». 
   Она достигла такого накала, что капитан команды Владимир Съемщиков даже обратился 
@@ -48,14 +46,11 @@
   Как нам стало известно, клуб может получить из областных средств 35 млн. рублей. 
   Об этом Дмитрий Шляхтин сообщил во вторник в ходе беседы зампредседателю 
   Самарской губернской думы Алексею Лескину, который также переживает за судьбу команды. 
-  Не знаем, насколько эта новость заинтересует Владимира Съемщикова.
-</p>
+  Не знаем, насколько эта новость заинтересует Владимира Съемщикова.</p>
 <aside>
-<p>
-А пока «Нова» продолжает сражаться на площадке. Правда, с переменным успехом. 
+<p>А пока «Нова» продолжает сражаться на площадке. Правда, с переменным успехом. 
 17 ноября наши волейболисты проиграли на выезде «Самотлору» со счетом 2:3. 
-24 ноября «Нова» принимает «Зенит» (Санкт - Петербург). Матч пройдет в Самаре в «МТЛ-Арена». Начало в 17 часов.
-</p>
+24 ноября «Нова» принимает «Зенит» (Санкт - Петербург). Матч пройдет в Самаре в «МТЛ-Арена». Начало в 17 часов.</p>
 </aside>
 </article>
 </section>
