--- a/index.html
+++ b/index.html
@@ -17,40 +17,18 @@
 </nav>
 </header>
 <section>
-<p><STRONG>
-Поддержка. "Нове" пообещали 35 миллионов</STRONG></p>
-</section>
-<section>
-<p><I>Капитан Владимир Съемщиков ждет, что финансирование команды войдет в нормальное русло.</I>
+      <h1>ПОДДЕРЖКА</h1>
+      <h2>"Нове" пообещали 35 миллионов</h2>
+ <figure class="sign">
+  <img src="https://img-cdn9.business-gazeta.ru/images/88/c7cf-246480f4e91ec260fdfd48e6ef79252b.jpg" alt="Владимир Съемщиков">
+   <figcaption>Капитан Владимир Съемщиков ждет, что финансирование команды войдет в нормальное русло</figcaption>
+   </figure>
+<article>
+<p>
+  2 ноября на страницах газеты была опубликована корреспонденция «Рушится морально». В ней мы рассказали о непростой финансовой ситуации в волейбольном клубе «Нова». Она достигла такого накала, что капитан команды Владимир Съемщиков даже обратился за поддержкой к губернатору Дмитрию Азарову, написав ему в Твиттер. С начала нынешнего сезона волейболисты не получили ни одной денежной выплаты, погасили только долги по зарплате за прошлый год. О том, что положение дел остается сложным, свидетельствует и тот факт, что на прошлой неделе клуб покинул кубинский доигровщик Йордан Астенго Биссет, который перешел в клуб «Газпром-Югра» из Сургута. Как сообщают в клубе: «Волейболист и клуб «Нова» расторгли контракт по обоюдному согласию». А ведь руководство «Новы» в начале сезона явно делало ставку на забивного кубинца.Но не потянули. Дмитрий Азаров дал поручение разобраться в ситуации и оказать помощь волейболистам,за которых болеет вся губерния, ВрИО министра спорта Дмитрию Шляхтину. Опустим некоторые детали, в том числе заявление о том, что министерство спорта все обязательства перед клубом выполнило. Но вот в начале нынешней недели в областных СМИ появилось сообщение о том, что готовится документация о выделении «Нове» дополнительной субсидии. Однако, о какой сумме идет речь, не говорилось. Как нам стало известно, клуб может получить из областных средств 35 млн. рублей. Об этом Дмитрий Шляхтин сообщил во вторник в ходе беседы зампредседателю Самарской губернской думы Алексею Лескину, который также переживает за судьбу команды. Не знаем, насколько эта новость заинтересует Владимира Съемщикова.
 </p>
-</section>
-<section>
-<article><p>
-  2 ноября на страницах газеты была опубликована корреспонденция «Рушится морально». 
-  В ней мы рассказали о непростой финансовой ситуации в волейбольном клубе «Нова». 
-  Она достигла такого накала, что капитан команды Владимир Съемщиков даже обратился 
-  за поддержкой к губернатору Дмитрию Азарову, написав ему в Твиттер. С начала нынешнего 
-  сезона волейболисты не получили ни одной денежной выплаты, погасили только долги по 
-  зарплате за прошлый год. О том, что положение дел остается сложным, свидетельствует и 
-  тот факт, что на прошлой неделе клуб покинул кубинский доигровщик Йордан Астенго Биссет, 
-  который перешел в клуб «Газпром-Югра» из Сургута. Как сообщают в клубе: 
-  «Волейболист и клуб «Нова» расторгли контракт по обоюдному согласию». 
-  А ведь руководство «Новы» в начале сезона явно делало ставку на забивного кубинца.
-  Но не потянули.
-  Дмитрий Азаров дал поручение разобраться в ситуации и оказать помощь волейболистам,
-  за которых болеет вся губерния, ВрИО министра спорта Дмитрию Шляхтину. 
-  Опустим некоторые детали, в том числе заявление о том, что министерство спорта 
-  все обязательства перед клубом выполнило. Но вот в начале нынешней недели в 
-  областных СМИ появилось сообщение о том, что готовится документация о выделении «Нове» 
-  дополнительной субсидии. Однако, о какой сумме идет речь, не говорилось. 
-  Как нам стало известно, клуб может получить из областных средств 35 млн. рублей. 
-  Об этом Дмитрий Шляхтин сообщил во вторник в ходе беседы зампредседателю 
-  Самарской губернской думы Алексею Лескину, который также переживает за судьбу команды. 
-  Не знаем, насколько эта новость заинтересует Владимира Съемщикова.</p>
 <aside>
-<p>А пока «Нова» продолжает сражаться на площадке. Правда, с переменным успехом. 
-17 ноября наши волейболисты проиграли на выезде «Самотлору» со счетом 2:3. 
-24 ноября «Нова» принимает «Зенит» (Санкт - Петербург). Матч пройдет в Самаре в «МТЛ-Арена». Начало в 17 часов.</p>
+<p>А пока «Нова» продолжает сражаться на площадке. Правда, с переменным успехом. 17 ноября наши волейболисты проиграли на выезде «Самотлору» со счетом 2:3. 24 ноября «Нова» принимает «Зенит» (Санкт - Петербург). Матч пройдет в Самаре в «МТЛ-Арена». Начало в 17 часов.</p>
 </aside>
 </article>
 </section>
